--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -38,7 +38,7 @@ services:
     #command: pnpm run start:dev
     environment:
       - NATS_SERVERS=${NATS_SERVERS}
-      - DATABASE_URL=mongodb+srv://josers771:BfP9A9gwl1xj0IDc@cluster0.mbh8r2f.mongodb.net/AuthDB
+      - DATABASE_URL=${MONGO_DATABASE_URL}
       - JWT_SECRET=${JWT_SECRET}
 
   payments-ms:
@@ -73,73 +73,11 @@ services:
       context: ./products-ms
       dockerfile: dockerfile.prod
       args:
-        - PRODUCTS_DATABASE_URL=file:/usr/src/app/prisma/dev.db
+        - PRODUCTS_DATABASE_URL=${PRODUCTS_DATABASE_URL}
     image: northamerica-northeast1-docker.pkg.dev/shop-microservices-475019/image-registry/products-ms
 
     environment:
       - NATS_SERVERS=${NATS_SERVERS}
-      - DATABASE_URL=file:/usr/src/app/prisma/dev.db
+      - DATABASE_URL=${PRODUCTS_DATABASE_URL}
       - PORT=3002
       - JWT_SECRET=${JWT_SECRET}
-
-  # auth-ms:
-  #   build: ./auth-ms
-  #   volumes:
-  #     - ./auth-ms/src:/usr/src/app/src
-  #   command: pnpm run start:dev
-  #   environment:
-  #     - NATS_SERVERS=nats://nats-server:4222
-  #     - DATABASE_URL=mongodb+srv://josers771:BfP9A9gwl1xj0IDc@cluster0.mbh8r2f.mongodb.net/AuthDB
-  #     - JWT_SECRET=EstaEsmiClaveSecretaSupersecreta1234zjajajjajajajasXD
-
-  # product-ms:
-  #   build: ./products-ms
-  #   volumes:
-  #     - ./products-ms/src:/usr/src/app/src
-  #   command: pnpm run start:dev
-  #   environment:
-  #     - NATS_SERVERS=nats://nats-server:4222
-  #     - PORT=3001
-  #     - DATABASE_URL=file:./dev.db
-
-  # # Orders MS
-  # orders-ms:
-  #   depends_on:
-  #     - orders-db
-  #   build: ./orders-ms
-  #   volumes:
-  #     - ./orders-ms/src:/usr/src/app/src
-  #   command: pnpm run start:dev
-  #   environment:
-  #     - NATS_SERVERS=nats://nats-server:4222
-  #     - PORT=3002
-  #     - DATABASE_URL=postgresql://postgres:123456@orders-db:5432/ordersdb?schema=public
-
-  # # Orders DB
-  # orders-db:
-  #   container_name: orders_database
-  #   image: postgres:16.2
-  #   restart: always
-  #   volumes:
-  #     - ./orders-ms/postgres:/var/lib/postgresql/data
-  #   ports:
-  #     - 5432:5432
-  #   environment:
-  #     - POSTGRES_USER=postgres
-  #     - POSTGRES_PASSWORD=123456
-  #     - POSTGRES_DB=ordersdb
-
-  # payments-ms:
-  #   build: ./payments-ms
-  #   volumes:
-  #     - ./payments-ms/src:/usr/src/app/src
-  #   ports:
-  #     - "${PAYMENT_MS_PORT}:3003"
-  #   command: pnpm run start:dev
-  #   environment:
-  #     - NATS_SERVERS=nats://nats-server:4222
-  #     - PORT=3003
-  #     - STRIPE_SECRET=${STRIPE_SECRET}
-  #     - STRIPE_SUCCESS_URL=${STRIPE_SUCCESS_URL}
-  #     - STRIPE_CANCEL_URL=${STRIPE_CANCEL_URL}
-  #     - STRIPE_ENDPOINT_SECRET=${STRIPE_ENDPOINT_SECRET}
